# Discordia-bot

./: README.md  Readme.md  gradlew  package.json  replit.md  server.js  settings.gradle.kts
.github/workflows/: Build.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/editor/: index.html
app/src/main/java/com/discordia/terminal/: CodeEditorActivity.kt  ExtensionsActivity.kt  FileAdapter.kt  FileManagerActivity.kt  GitActivity.kt  GitHubManager.kt  LocalServer.kt  MainActivity.kt  ProjectBuilderActivity.kt  ServerActivity.kt  ServerForegroundService.kt  SettingsActivity.kt  SetupActivity.kt  SetupAdapter.kt  ShellEngine.kt  SoundManager.kt  SplashActivity.kt  TerminalActivity.kt  WebViewActivity.kt  WorkflowBuilderActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_code_editor.xml  activity_extensions.xml  activity_file_manager.xml  activity_git.xml  activity_main.xml  activity_project_builder.xml  activity_server.xml  activity_settings.xml  activity_setup.xml  activity_splash.xml  activity_terminal.xml  activity_webview.xml  activity_workflow_builder.xml  item_extension.xml  item_file.xml  item_setup.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
geode-mod/: BUILD.md  CMakeLists.txt  mod.json
geode-mod/src/: BotManager.cpp  BotManager.hpp  Global.cpp  Global.hpp  Macro.cpp  Macro.hpp  includes.hpp  main.cpp
geode-mod/src/hacks/: Clickbot.cpp  Clickbot.hpp  FrameStepper.cpp  Noclip.cpp  Other.cpp  Speedhack.cpp  TpsBypass.cpp
geode-mod/src/layers/: BotLayer.cpp  BotLayer.hpp  MacroListLayer.cpp  MacroListLayer.hpp
geode-mod/src/ui/: BotLayer.cpp  BotLayer.hpp  MacroListLayer.cpp  MacroListLayer.hpp
ide/: CHANGES.md
ide/public/: index.html
public/: index.html
